add doc info
